# wireguard-uptimekuma-reporter

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-build-push.yaml
src/: main.rs  setting.rs  uptime_kuma.rs  utils.rs  wireguard.rs
src/uptime_tests/: curl.rs  mod.rs  ping.rs
