[package]
name = "uptime-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
lazy_static = "1.5.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["fs", "macros", "process", "rt", "signal", "time"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"

[profile.release]
panic = "abort"
strip = true
